# cypris_data_engineer_challenge

./: .gitignore  README.md  extract_doc_numbers.py  pyproject.toml  sample_patent.xml  test_extract_doc_numbers.py
test_data/: all_priorities.xml  malformed.xml  multiple_refs.xml  partial_data.xml
