[project]
name = "xml-doc-number-extractor"
version = "1.0.0"
description = "Extract doc-number values from patent XML documents with priority-based ordering"
authors = [
    {name = "Nate White"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["test_extract_doc_numbers.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
